--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -15,6 +16,7 @@
         android:id="@+id/scaleImageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/ibooker" />
+        android:src="@drawable/ibooker"
+        app:isLimitSize="true" />
 
 </LinearLayout>
